--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <title>Tela de Login - Confirmação</title>
   <style>
     :root{
-      --yellow:#ff0000;
+      --yellow:#f75454;
       --muted:#000000;
-      --bg:#ff0000;
+      --bg:#ffffff;
       --card-shadow: 0 6px 20px rgba(0,0,0,0.08);
       font-family: Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
     }
