--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Tela de Login - Confirmação</title>
   <style>
     :root{
-      --yellow:#f75454;
+      --yellow:#f72222;
       --muted:#000000;
       --bg:#ffffff;
       --card-shadow: 0 6px 20px rgba(0,0,0,0.08);
@@ -62,7 +62,7 @@
 
     <img src="assets/logo.png" alt="Logo" class="logo" />
 
-    <h1>Para acessar faça sua confirmação de segurança</h1>
+    <h1>Para acessar faça sua confirmação de 4 digitos</h1>
     <p>confirmação de segurança.</p>
 
     <form id="loginForm" onsubmit="handleSubmit(event)">
